# Watermain-Predictor

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pubspec.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260901_01_init.py
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/jobs/: celery_app.py  rss_utils.py  tasks_ingest.py
app/models/: __init__.py  entities.py
app/repositories/: incidents.py
app/schemas/: incidents.py
app/services/: clustering.py  incident_service.py  scoring.py
backend_worker/: __init__.py  config.py  geocoding.py  models.py  rss_ingestion.py
lib/: main.dart
lib/models/: incident.dart
lib/repositories/: incident_repository.dart
lib/screens/: home_screen.dart  incident_detail_screen.dart  settings_screen.dart
lib/services/: api_service.dart  notification_service.dart  settings_service.dart
lib/state/: app_controller.dart
lib/widgets/: incident_list_tile.dart
test/: incident_repository_test.dart
tests/: test_clustering.py  test_rss_ingestion.py  test_scoring.py  test_tasks_ingest.py
