[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toronto-water-break-watch"
version = "0.1.0"
description = "Enterprise-ready MVP backend for Toronto Water Break Watch"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "geoalchemy2>=0.15.2",
  "pydantic-settings>=2.4.0",
  "celery>=5.4.0",
  "redis>=5.0.8",
  "python-dateutil>=2.9.0",
  "requests>=2.32.0",
  "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
